[package]
name = "embedded_linux_eink_example"
version = "0.1.0"
authors = ["Christoph Groß <christoph-gross@mailbox.org>"]
edition = "2018"

[dependencies]

epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", rev = "34a0d81b757edbb362a427a6429e74e5aea304ce"}

#epd-waveshare = { path = "../../"}
# 687496 -> 16868

embedded-hal = { version = "0.2.2", features = ["unproven"] }
embedded-graphics = "0.7"

stm32f1xx-hal = { version = "0.6", features = ["rt", "stm32f103" ] }
cortex-m = "0.6.0"
cortex-m-rt = { version = "0.6.6", features = ["device"] }
panic-semihosting = "0.5"
alloc-cortex-m = "0.4"
